--- a/works/monovision/index.html
+++ b/works/monovision/index.html
@@ -23,7 +23,7 @@
                 <h1 class="promo__title">Monovision Studio</h1>
                 <h2 class="promo__subtitle">Want some style on your photos?</h2>
 
-                <a href="#portfolio" class="btn">Portfolio</a>
+                <a href="#" class="btn">Portfolio</a>
 
                 <div class="promo__address">
                     Location:
@@ -78,7 +78,7 @@
 
         <section class="works">
             <div class="container">
-                <h2 id="portfolio" class="title"><span>Our works</span></h2>
+                <h2 class="title"><span>Our works</span></h2>
 
                 <div class="works__grid">
                     <img src="img/works/bridge.jpg" alt="bridge">
